modified linting script

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ install:
 
 jobs:
   include:
-    - stage: test
+#    - stage: test
       # placeholder for unit tests
-      script: exit 0
+#      script: exit 0
     - stage: lint
       script: ./testing/lint.sh
       #cd dynatrace-oneagent-operator && helm template --debug . && helm template --debug . | yamllint -
