--- a/dynatrace-operator/questions.yml
+++ b/dynatrace-operator/questions.yml
@@ -18,7 +18,6 @@ questions:
     description: "Your Dynatrace API token - You can generate this token in your Dynatrace environment"
     default: ""
     type: string
-    required: false
     group: "Global Configuration"
 
   - variable: paasToken
@@ -38,81 +37,139 @@ questions:
 
   - variable: proxy
     label: "Define a proxy"
-    description: "Configures a proxy for the Agent, AgentDownload and the Operator. Provide the proxy here"
+    description: "Configures a proxy for the ActiveGate and Operator. Provide the proxy here"
     default: ""
     type: string
     group: "Global Configuration"
 
   - variable: trustedCAs
     label: "Add custom CA certificates"
-    description: "Adds the provided CA certificates to the Operator and the OneAgent. Provide your custom certificates here. If this is not set the default embedded certificates on the images will be used"
+    description: "Sets the name of the configmap containing custom certificates. If this is not set the default embedded certificates on the images will be used"
     default: ""
-    type: multiline
+    type: string
     group: "Global Configuration"
 
   - variable: networkZone
     label: "Define a network zone"
-    description: "Optional: sets a NetworkZone for the Dynatrace Operator."
+    description: "Optional: Sets a NetworkZone for the Dynatrace Operator."
     default: ""
     type: string
     group: "Global Configuration"
+
+  #################### Kubernetes Monitoring (OPTIONAL) ####################
 
   - variable: kubernetesMonitoring.enable
     label: "Enable Kubernetes monitoring"
     description: "Enables Kubernetes monitoring for your cluster"
-    default: true
-    type: boolean
-    group: "Global Configuration"
-
-  #################### Advanced Configuration (OPTIONAL) ####################
-  - variable: show_advanced_config
-    label: "Show advanced configuration"
-    description: "Show advanced configuration options for the Dynatrace Operator"
     default: false
     type: boolean
-    group: "Advanced Configuration (OPTIONAL)"
+    group: "Kubernetes Monitoring"
+    show_subquestion_if: "kubernetesMonitoring.enable=true"
+    subquestions:
+      - variable: kubernetesMonitoring.image
+        label: "Custom ActiveGate image location"
+        description: "Optional: The location from where to grab the Dynatrace operator image - default points to the tenant specific registry"
+        default: ""
+        type: string
+#        group: "Kubernetes Monitoring"
+#        show_if: "kubernetesMonitoring.enable=true"
+      - variable: kubernetesMonitoring.disableActivegateUpdate
+        label: "Enable / Disable automatic updates"
+        description: "Optional: Disables automatic restarts of ActiveGate pods in case a new version is available."
+        default: false
+        type: boolean
+#        group: "Kubernetes Monitoring"
+#        show_if: "kubernetesMonitoring.enable=true"
+      - variable: kubernetesMonitoring.replicas
+        label: "Amount of replicas of ActiveGate pods"
+        description: "Sets the amount of replicas of ActiveGate pods are made"
+        default: 1
+        type: int
+#        group: "Kubernetes Monitoring"
+#        show_if: "kubernetesMonitoring.enable=true"
+      - variable: kubernetesMonitoring.serviceAccountName
+        label: "Name of the service-account for ActiveGate-pods"
+        description: "Optional: The name of the ServiceAccount to assign to the ActiveGate Pods."
+        default: "dynatrace-kubernetes-monitoring"
+        type: string
+#        group: "Kubernetes Monitoring"
+#        show_if: "kubernetesMonitoring.enable=true"
+      - variable: kubernetesMonitoring.tolerations
+        label: "Custom tolerations for the ActiveGate pods"
+        description: "Defines custom tolerations for the ActiveGate pods - Please edit as Yaml for the best experience - see https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/"
+        default: ""
+        type: multiline
+      - variable: kubernetesMonitoring.nodeSelector
+        label: "Node selector to control the selection of nodes"
+        description: "Defines a NodeSelector to customize to which nodes the ActiveGate will be rolled out on - Please edit as Yaml for the best experience"
+        default: ""
+        type: multiline
+      - variable: kubernetesMonitoring.dnsPolicy
+        label: "Set custom DNS Policy"
+        description: "DNS Policy for ActiveGate pods. Empty for default (ClusterFirst), more at https://kubernetes.io/docs/concepts/services-networking/dns-pod-service/#pod-s-dns-policy"
+        default: ""
+        type: string
+      - variable: kubernetesMonitoring.priorityClassName
+        label: "Assign priority class to ActiveGate pods"
+        description: "Priority class to assign to ActiveGate pods, more at https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/"
+        default: ""
+        type: string
+      - variable: kubernetesMonitoring.resources
+        label: "Resource definition for the ActiveGate pods"
+        description: "Defines the resources the ActiveGate pods can use - Please edit as Yaml for the best experience"
+        default: ""
+        type: multiline
+      - variable: kubernetesMonitoring.labels
+        label: "Custom labels for the ActiveGate pods"
+        description: "Defines labels for ActiveGate pods to structure workloads as desired - Please edit as Yaml for the best experience"
+        default: ""
+        type: multiline
+      - variable: kubernetesMonitoring.args
+        label: "Arguments for the ActiveGate installer"
+        description: "Defines additional arguments which get passed to the ActiveGate installer - Please edit as Yaml for the best experience. The expected format is YAML and not a string"
+        default: ""
+        type: multiline
+      - variable: kubernetesMonitoring.env
+        label: "Environment variables for the ActiveGate"
+        description: "Defines additional environment variables which get passed to the ActiveGate - Please edit as Yaml for the best experience"
+        default: ""
+        type: multiline
+      - variable: kubernetesMonitoring.group
+        label: "Activation group"
+        description: "Optional: Set activation group for ActiveGate"
+        default: ""
+        type: string
+      - variable: kubernetesMonitoring.customProperties
+        label: "Custom properties for the ActiveGate"
+        description: "Optional: Add a custom properties - Please edit as Yaml for the best experience - more at https://www.dynatrace.com/support/help/setup-and-configuration/dynatrace-activegate/configuration/configure-activegate/"
+        default: ""
+        type: multiline
 
-  - variable: operator.image
-    label: "Custom Operator image location"
-    description: "The location from where to grab the Dynatrace operator image - default is quay.io/dynatrace/dynatrace-operator"
-    default: ""
-    type: string
-    group: "Advanced Configuration (OPTIONAL)"
-    show_if: "show_advanced_config=true"
-
-  - variable: activeGate.image
-    label: "Custom ActiveGate image location"
-    description: "The location from where to grab the ActiveGate image - default for Kubernetes is ENVIRONMENTID.live.dynatrace.com/linux/activegate"
-    default: ""
-    type: string
-    group: "Advanced Configuration (OPTIONAL)"
-    show_if: "show_advanced_config=true && kubernetesMonitoring.enable=true"
-
-  - variable: activeGate.disableActivegateUpdate
-    label: "Disable automatic updates"
-    description: "Disables automatic restarts of ActiveGate pods in case a new version is available"
-    default: false
-    type: boolean
-    group: "Advanced Configuration (OPTIONAL)"
-    show_if: "show_advanced_config=true && kubernetesMonitoring.enable=true"
-
-  - variable: kubernetesMonitoring.replicas
-    label: "Amount of replicas for kubernetesMonitoring"
-    default: 1
-    type: int
-    group: "Advanced Configuration (OPTIONAL)"
-    show_if: "show_advanced_config=true && kubernetesMonitoring.enable=true"
-
-  - variable: kubernetesMonitoring.resources
-    label: "Resource definition for the kubernetesMonitoring pod"
-    description: "Defines the resources the kubernetesMonitoring pod can use - Please edit as Yaml for the best experience"
-    type: string
-    group: "Advanced Configuration (OPTIONAL)"
-    show_if: "show_advanced_config=true && kubernetesMonitoring.enable=true"
-
-  - variable: kubernetesMonitoring.labels
-    label: "Custom labels for the kubernetesMonitoring"
-    description: "Defines labels for kubernetesMonitoring pod to structure workloads as desired - Please edit as Yaml for the best experience"
-    type: string
-    group: "Advanced Configuration (OPTIONAL)"
-    show_if: "show_advanced_config=true && kubernetesMonitoring.enable=true"
+#  #################### Advanced Configuration (OPTIONAL) ####################
+#  - variable: show_advanced_config
+#    label: "Show advanced configuration"
+#    description: "Show advanced configuration options for the Dynatrace Operator"
+#    default: false
+#    type: boolean
+#    group: "Advanced Configuration (OPTIONAL)"
+#
+#  - variable: kubernetesMonitoring.replicas
+#    label: "Amount of replicas for kubernetesMonitoring"
+#    default: 1
+#    type: int
+#    group: "Advanced Configuration (OPTIONAL)"
+#    show_if: "show_advanced_config=true && kubernetesMonitoring.enable=true"
+#
+#  - variable: kubernetesMonitoring.resources
+#    label: "Resource definition for the kubernetesMonitoring pod"
+#    description: "Defines the resources the kubernetesMonitoring pod can use - Please edit as Yaml for the best experience"
+#    type: string
+#    group: "Advanced Configuration (OPTIONAL)"
+#    show_if: "show_advanced_config=true && kubernetesMonitoring.enable=true"
+#
+#  - variable: kubernetesMonitoring.labels
+#    label: "Custom labels for the kubernetesMonitoring"
+#    description: "Defines labels for kubernetesMonitoring pod to structure workloads as desired - Please edit as Yaml for the best experience"
+#    type: string
+#    group: "Advanced Configuration (OPTIONAL)"
+#    show_if: "show_advanced_config=true && kubernetesMonitoring.enable=true"
