--- a/dynatrace-operator/questions.yml
+++ b/dynatrace-operator/questions.yml
@@ -64,86 +64,86 @@ questions:
     default: false
     type: boolean
     group: "Kubernetes Monitoring"
-    show_subquestion_if: "kubernetesMonitoring.enable=true"
+    show_subquestion_if: true
     subquestions:
-      - variable: kubernetesMonitoring.image
-        label: "Custom ActiveGate image location"
-        description: "Optional: The location from where to grab the Dynatrace operator image - default points to the tenant specific registry"
-        default: ""
-        type: string
+    - variable: kubernetesMonitoring.image
+      label: "Custom ActiveGate image location"
+      description: "Optional: The location from where to grab the Dynatrace operator image - default points to the tenant specific registry"
+      default: ""
+      type: string
 #        group: "Kubernetes Monitoring"
 #        show_if: "kubernetesMonitoring.enable=true"
-      - variable: kubernetesMonitoring.disableActivegateUpdate
-        label: "Enable / Disable automatic updates"
-        description: "Optional: Disables automatic restarts of ActiveGate pods in case a new version is available."
-        default: false
-        type: boolean
+    - variable: kubernetesMonitoring.disableActivegateUpdate
+      label: "Enable / Disable automatic updates"
+      description: "Optional: Disables automatic restarts of ActiveGate pods in case a new version is available."
+      default: false
+      type: boolean
 #        group: "Kubernetes Monitoring"
 #        show_if: "kubernetesMonitoring.enable=true"
-      - variable: kubernetesMonitoring.replicas
-        label: "Amount of replicas of ActiveGate pods"
-        description: "Sets the amount of replicas of ActiveGate pods are made"
-        default: 1
-        type: int
+    - variable: kubernetesMonitoring.replicas
+      label: "Amount of replicas of ActiveGate pods"
+      description: "Sets the amount of replicas of ActiveGate pods are made"
+      default: 1
+      type: int
 #        group: "Kubernetes Monitoring"
 #        show_if: "kubernetesMonitoring.enable=true"
-      - variable: kubernetesMonitoring.serviceAccountName
-        label: "Name of the service-account for ActiveGate-pods"
-        description: "Optional: The name of the ServiceAccount to assign to the ActiveGate Pods."
-        default: "dynatrace-kubernetes-monitoring"
-        type: string
+    - variable: kubernetesMonitoring.serviceAccountName
+      label: "Name of the service-account for ActiveGate-pods"
+      description: "Optional: The name of the ServiceAccount to assign to the ActiveGate Pods."
+      default: "dynatrace-kubernetes-monitoring"
+      type: string
 #        group: "Kubernetes Monitoring"
 #        show_if: "kubernetesMonitoring.enable=true"
-      - variable: kubernetesMonitoring.tolerations
-        label: "Custom tolerations for the ActiveGate pods"
-        description: "Defines custom tolerations for the ActiveGate pods - Please edit as Yaml for the best experience - see https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/"
-        default: ""
-        type: multiline
-      - variable: kubernetesMonitoring.nodeSelector
-        label: "Node selector to control the selection of nodes"
-        description: "Defines a NodeSelector to customize to which nodes the ActiveGate will be rolled out on - Please edit as Yaml for the best experience"
-        default: ""
-        type: multiline
-      - variable: kubernetesMonitoring.dnsPolicy
-        label: "Set custom DNS Policy"
-        description: "DNS Policy for ActiveGate pods. Empty for default (ClusterFirst), more at https://kubernetes.io/docs/concepts/services-networking/dns-pod-service/#pod-s-dns-policy"
-        default: ""
-        type: string
-      - variable: kubernetesMonitoring.priorityClassName
-        label: "Assign priority class to ActiveGate pods"
-        description: "Priority class to assign to ActiveGate pods, more at https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/"
-        default: ""
-        type: string
-      - variable: kubernetesMonitoring.resources
-        label: "Resource definition for the ActiveGate pods"
-        description: "Defines the resources the ActiveGate pods can use - Please edit as Yaml for the best experience"
-        default: ""
-        type: multiline
-      - variable: kubernetesMonitoring.labels
-        label: "Custom labels for the ActiveGate pods"
-        description: "Defines labels for ActiveGate pods to structure workloads as desired - Please edit as Yaml for the best experience"
-        default: ""
-        type: multiline
-      - variable: kubernetesMonitoring.args
-        label: "Arguments for the ActiveGate installer"
-        description: "Defines additional arguments which get passed to the ActiveGate installer - Please edit as Yaml for the best experience. The expected format is YAML and not a string"
-        default: ""
-        type: multiline
-      - variable: kubernetesMonitoring.env
-        label: "Environment variables for the ActiveGate"
-        description: "Defines additional environment variables which get passed to the ActiveGate - Please edit as Yaml for the best experience"
-        default: ""
-        type: multiline
-      - variable: kubernetesMonitoring.group
-        label: "Activation group"
-        description: "Optional: Set activation group for ActiveGate"
-        default: ""
-        type: string
-      - variable: kubernetesMonitoring.customProperties
-        label: "Custom properties for the ActiveGate"
-        description: "Optional: Add a custom properties - Please edit as Yaml for the best experience - more at https://www.dynatrace.com/support/help/setup-and-configuration/dynatrace-activegate/configuration/configure-activegate/"
-        default: ""
-        type: multiline
+    - variable: kubernetesMonitoring.tolerations
+      label: "Custom tolerations for the ActiveGate pods"
+      description: "Defines custom tolerations for the ActiveGate pods - Please edit as Yaml for the best experience - see https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/"
+      default: ""
+      type: multiline
+    - variable: kubernetesMonitoring.nodeSelector
+      label: "Node selector to control the selection of nodes"
+      description: "Defines a NodeSelector to customize to which nodes the ActiveGate will be rolled out on - Please edit as Yaml for the best experience"
+      default: ""
+      type: multiline
+    - variable: kubernetesMonitoring.dnsPolicy
+      label: "Set custom DNS Policy"
+      description: "DNS Policy for ActiveGate pods. Empty for default (ClusterFirst), more at https://kubernetes.io/docs/concepts/services-networking/dns-pod-service/#pod-s-dns-policy"
+      default: ""
+      type: string
+    - variable: kubernetesMonitoring.priorityClassName
+      label: "Assign priority class to ActiveGate pods"
+      description: "Priority class to assign to ActiveGate pods, more at https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/"
+      default: ""
+      type: string
+    - variable: kubernetesMonitoring.resources
+      label: "Resource definition for the ActiveGate pods"
+      description: "Defines the resources the ActiveGate pods can use - Please edit as Yaml for the best experience"
+      default: ""
+      type: multiline
+    - variable: kubernetesMonitoring.labels
+      label: "Custom labels for the ActiveGate pods"
+      description: "Defines labels for ActiveGate pods to structure workloads as desired - Please edit as Yaml for the best experience"
+      default: ""
+      type: multiline
+    - variable: kubernetesMonitoring.args
+      label: "Arguments for the ActiveGate installer"
+      description: "Defines additional arguments which get passed to the ActiveGate installer - Please edit as Yaml for the best experience. The expected format is YAML and not a string"
+      default: ""
+      type: multiline
+    - variable: kubernetesMonitoring.env
+      label: "Environment variables for the ActiveGate"
+      description: "Defines additional environment variables which get passed to the ActiveGate - Please edit as Yaml for the best experience"
+      default: ""
+      type: multiline
+    - variable: kubernetesMonitoring.group
+      label: "Activation group"
+      description: "Optional: Set activation group for ActiveGate"
+      default: ""
+      type: string
+    - variable: kubernetesMonitoring.customProperties
+      label: "Custom properties for the ActiveGate"
+      description: "Optional: Add a custom properties - Please edit as Yaml for the best experience - more at https://www.dynatrace.com/support/help/setup-and-configuration/dynatrace-activegate/configuration/configure-activegate/"
+      default: ""
+      type: multiline
 
 #  #################### Advanced Configuration (OPTIONAL) ####################
 #  - variable: show_advanced_config
