--- a/dynatrace-operator/templates/secret.yaml
+++ b/dynatrace-operator/templates/secret.yaml
@@ -21,8 +21,8 @@ metadata:
 data:
   apiToken: {{ .Values.apiToken | b64enc }}
   paasToken: {{ .Values.paasToken | b64enc }}
-  {{- if .Values.proxy }}
-  proxy: {{ .Values.proxy | b64enc }}
+  {{- if .Values.proxy.value }}
+  proxy: {{ .Values.proxy.value | b64enc }}
   {{- end }}
 type: Opaque
 {{- end }}
