--- a/dynatrace-operator-google-marketplace/charts/dynatrace-operator/templates/deployment-operator.yaml
+++ b/dynatrace-operator-google-marketplace/charts/dynatrace-operator/templates/deployment-operator.yaml
@@ -39,7 +39,7 @@ spec:
           - dynatrace-operator
           imagePullPolicy: Always
           env:
-            - name: WATCH_NAMESPACE
+            - name: POD_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
@@ -47,3 +47,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+          resources:
+            requests:
+              cpu: 50m
+              memory: 64Mi
+            limits:
+              cpu: 100m
+              memory: 256Mi
