Adapt questions yaml to set resources differently in rancher

--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/values.yaml
@@ -32,7 +32,13 @@ oneagent:
   disableAgentUpdate: false
   enableIstio: false
   dnsPolicy: ""
-  resources: {}
+  resources:
+    requests:
+      cpu:
+      memory:
+    limits:
+      cpu:
+      memory:
   tolerations:
     - effect: NoSchedule
       key: node-role.kubernetes.io/master
