--- a/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator/values.yaml
@@ -42,7 +42,13 @@ oneagent:
   enableIstio: false
   dnsPolicy: ""
   # The expected format is YAML and not a string
-  resources: ""
+  resources:
+    requests:
+      cpu:
+      memory:
+    limits:
+      cpu:
+      memory:
   # The expected format is YAML and not a string
   tolerations: ""
   waitReadySeconds: null
