--- a/dynatrace-oneagent-operator/questions.yml
+++ b/dynatrace-oneagent-operator/questions.yml
@@ -38,10 +38,10 @@ questions:
   required: true
   group: "Agent Configuration (REQUIRED)"
 
-  #################### Use custom resource settings ###################
+  #################### Use custom limits settings ###################
 
-- variable: use_custom_resource_settings
-  label: "Use custom resource settings"
+- variable: use_custom_limits_settings
+  label: "Use custom limits settings"
   description: "Use custom resource limits for the Dynatrace OneAgent"
   default: false
   type: boolean
@@ -52,28 +52,28 @@ questions:
   description: "Defines the minimum requested CPU by the OneAgent"
   type: string
   group: "Use custom resource settings"
-  show_if: "mode=fullstack && use_custom_resource_settings=true"
+  show_if: "mode=fullstack && use_custom_limits_settings=true"
 
 - variable: oneagent.resources.requests.memory
   label: "Memory resource request"
   description: "Defines the minimum requested memory by the OneAgent"
   type: string
   group: "Use custom resource settings"
-  show_if: "mode=fullstack && use_custom_resource_settings=true"
+  show_if: "mode=fullstack && use_custom_limits_settings=true"
 
 - variable: oneagent.resources.limits.cpu
   label: "CPU resource limits"
   description: "Defines the maximum provided CPU for the OneAgent"
   type: string
   group: "Use custom resource settings"
-  show_if: "mode=fullstack && use_custom_resource_settings=true"
+  show_if: "mode=fullstack && use_custom_limits_settings=true"
 
 - variable: oneagent.resources.limits.memory
   label: "Memory resource limits"
   description: "Defines the maximum provided memory for the OneAgent"
   type: string
   group: "Use custom resource settings"
-  show_if: "mode=fullstack && use_custom_resource_settings=true"
+  show_if: "mode=fullstack && use_custom_limits_settings=true"
 
 #################### Advanced Agent Configuration (OPTIONAL) ####################
 - variable: show_advanced_config
