Fix/rancher resource setting (#60)
* Adapt questions yaml to set resources differently in rancher

--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configmap.yaml
@@ -911,6 +911,28 @@ data:
       trustedCAs: {{ .Values.oneagent.name }}
       {{- end }}
 
+      {{- if .Values.oneagent.resources }}
+      resources:
+        {{- if or (.Values.oneagent.resources.requests.cpu) (.Values.oneagent.resources.requests.memory) }}
+        requests:
+          {{- if .Values.oneagent.resources.requests.cpu }}
+          cpu: {{ .Values.oneagent.resources.requests.cpu }}
+          {{- end }}
+          {{- if .Values.oneagent.resources.requests.memory }}
+          memory: {{ .Values.oneagent.resources.requests.memory }}
+          {{- end }}
+        {{- end }}
+        {{- if or (.Values.oneagent.resources.limits.cpu) (.Values.oneagent.resources.limits.memory) }}
+        limits:
+          {{- if .Values.oneagent.resources.limits.cpu }}
+          cpu: {{ .Values.oneagent.resources.limits.cpu }}
+          {{- end }}
+          {{- if .Values.oneagent.resources.limits.memory }}
+          memory: {{ .Values.oneagent.resources.limits.memory }}
+          {{- end }}
+        {{- end }}
+      {{- end }}
+
       {{- if .Values.oneagent.networkZone }}
       networkZone: {{ .Values.oneagent.networkZone }}
       {{- end }}
@@ -979,7 +1001,25 @@ data:
       {{- end }}
 
       {{- if .Values.oneagent.resources }}
-      resources: {{- toYaml .Values.oneagent.resources | nindent 4 }}
+      resources:
+        {{- if or (.Values.oneagent.resources.requests.cpu) (.Values.oneagent.resources.requests.memory) }}
+        requests:
+          {{- if .Values.oneagent.resources.requests.cpu }}
+          cpu: {{ .Values.oneagent.resources.requests.cpu }}
+          {{- end }}
+          {{- if .Values.oneagent.resources.requests.memory }}
+          memory: {{ .Values.oneagent.resources.requests.memory }}
+          {{- end }}
+        {{- end }}
+        {{- if or (.Values.oneagent.resources.limits.cpu) (.Values.oneagent.resources.limits.memory) }}
+        limits:
+          {{- if .Values.oneagent.resources.limits.cpu }}
+          cpu: {{ .Values.oneagent.resources.limits.cpu }}
+          {{- end }}
+          {{- if .Values.oneagent.resources.limits.memory }}
+          memory: {{ .Values.oneagent.resources.limits.memory }}
+          {{- end }}
+        {{- end }}
       {{- end }}
 
       {{- if .Values.oneagent.flavor }}
