Fixed starting space at comment and added for GKE

--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/values.yaml
@@ -32,13 +32,13 @@ oneagent:
   disableAgentUpdate: false
   enableIstio: false
   dnsPolicy: ""
-  resources:
-    requests:
-      cpu:
-      memory:
-    limits:
-      cpu:
-      memory:
+  # resources:
+  #   requests:
+  #     cpu: 100m
+  #     memory: 512Mi
+  #   limits:
+  #     cpu: 300m
+  #     memory: 1.5Gi
   tolerations:
     - effect: NoSchedule
       key: node-role.kubernetes.io/master
