--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
@@ -104,23 +104,17 @@ data:
     apiVersion: apiextensions.k8s.io/v1beta1
     kind: CustomResourceDefinition
     metadata:
+      annotations:
+        controller-gen.kubebuilder.io/version: v0.3.0
+      creationTimestamp: null
       name: dynakubes.dynatrace.com
-      ownerReferences:
-      - apiVersion: v1beta1
-        blockOwnerDeletion: true
-        kind: Application
-        name: {{ .Release.Name }}
-        uid: ##UID##
     spec:
       additionalPrinterColumns:
         - JSONPath: .spec.apiUrl
           name: ApiUrl
           type: string
-        - JSONPath: .spec.tokens
+        - JSONPath: .status.tokens
           name: Tokens
-          type: string
-        - JSONPath: .status.version
-          name: Version
           type: string
         - JSONPath: .metadata.creationTimestamp
           name: Age
@@ -153,6 +147,15 @@ data:
             spec:
               description: DynaKubeSpec defines the desired state of DynaKube
               properties:
+                activeGate:
+                  description: General configuration about ActiveGate instances
+                  properties:
+                    image:
+                      description: 'Optional: the ActiveGate container image. Defaults
+                        to the latest ActiveGate image provided by the Docker Registry
+                        implementation from the Dynatrace environment set as API URL.'
+                      type: string
+                  type: object
                 apiUrl:
                   description: Location of the Dynatrace API to connect to, including
                     your specific environment ID
@@ -163,24 +166,129 @@ data:
                 kubernetesMonitoring:
                   description: Enables Kubernetes Monitoring
                   properties:
-                    activeGateVersion:
-                      description: 'Optional: If specified, indicates the ActiveGate version
-                        to use Defaults to latest Example: {major.minor.release} - 1.200.0'
-                      type: string
-                    disableActiveGateUpdate:
-                      description: Disable automatic restarts of Activegate pods in case
-                        a new version is available
-                      type: boolean
-                    dnsPolicy:
-                      description: 'Optional: Sets DNS Policy for the ActiveGate pods'
-                      type: string
+                    args:
+                      description: 'Optional: Adds additional arguments for the ActiveGate
+                        instances'
+                      items:
+                        type: string
+                      type: array
+                    customProperties:
+                      description: 'Optional: Add a custom properties file by providing
+                        it as a value or reference it from a secret If referenced from
+                        a secret, make sure the key is called ''customProperties'''
+                      properties:
+                        value:
+                          type: string
+                        valueFrom:
+                          type: string
+                      type: object
                     enabled:
                       description: Enables Kubernetes Monitoring
                       type: boolean
-                    image:
-                      description: 'Optional: the ActiveGate container image Defaults
-                        to docker.io/dynatrace/activegate:latest for Kubernetes and to
-                        registry.connect.redhat.com/dynatrace/activegate for OpenShift'
+                    env:
+                      description: 'Optional: List of environment variables to set for
+                        the ActiveGate'
+                      items:
+                        description: EnvVar represents an environment variable present
+                          in a Container.
+                        properties:
+                          name:
+                            description: Name of the environment variable. Must be a C_IDENTIFIER.
+                            type: string
+                          value:
+                            description: 'Variable references $(VAR_NAME) are expanded
+                              using the previous defined environment variables in the
+                              container and any service environment variables. If a variable
+                              cannot be resolved, the reference in the input string will
+                              be unchanged. The $(VAR_NAME) syntax can be escaped with
+                              a double $$, ie: $$(VAR_NAME). Escaped references will never
+                              be expanded, regardless of whether the variable exists or
+                              not. Defaults to "".'
+                            type: string
+                          valueFrom:
+                            description: Source for the environment variable's value.
+                              Cannot be used if value is not empty.
+                            properties:
+                              configMapKeyRef:
+                                description: Selects a key of a ConfigMap.
+                                properties:
+                                  key:
+                                    description: The key to select.
+                                    type: string
+                                  name:
+                                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                                      TODO: Add other useful fields. apiVersion, kind,
+                                      uid?'
+                                    type: string
+                                  optional:
+                                    description: Specify whether the ConfigMap or its
+                                      key must be defined
+                                    type: boolean
+                                required:
+                                  - key
+                                type: object
+                              fieldRef:
+                                description: 'Selects a field of the pod: supports metadata.name,
+                                  metadata.namespace, metadata.labels, metadata.annotations,
+                                  spec.nodeName, spec.serviceAccountName, status.hostIP,
+                                  status.podIP, status.podIPs.'
+                                properties:
+                                  apiVersion:
+                                    description: Version of the schema the FieldPath is
+                                      written in terms of, defaults to "v1".
+                                    type: string
+                                  fieldPath:
+                                    description: Path of the field to select in the specified
+                                      API version.
+                                    type: string
+                                required:
+                                  - fieldPath
+                                type: object
+                              resourceFieldRef:
+                                description: 'Selects a resource of the container: only
+                                  resources limits and requests (limits.cpu, limits.memory,
+                                  limits.ephemeral-storage, requests.cpu, requests.memory
+                                  and requests.ephemeral-storage) are currently supported.'
+                                properties:
+                                  containerName:
+                                    description: 'Container name: required for volumes,
+                                      optional for env vars'
+                                    type: string
+                                  divisor:
+                                    description: Specifies the output format of the exposed
+                                      resources, defaults to "1"
+                                  resource:
+                                    description: 'Required: resource to select'
+                                    type: string
+                                required:
+                                  - resource
+                                type: object
+                              secretKeyRef:
+                                description: Selects a key of a secret in the pod's namespace
+                                properties:
+                                  key:
+                                    description: The key of the secret to select from.  Must
+                                      be a valid secret key.
+                                    type: string
+                                  name:
+                                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                                      TODO: Add other useful fields. apiVersion, kind,
+                                      uid?'
+                                    type: string
+                                  optional:
+                                    description: Specify whether the Secret or its key
+                                      must be defined
+                                    type: boolean
+                                required:
+                                  - key
+                                type: object
+                            type: object
+                        required:
+                          - name
+                        type: object
+                      type: array
+                    group:
+                      description: 'Optional: Set activation group for ActiveGate'
                       type: string
                     kubernetesApiEndpoint:
                       description: The public API endpoint of the Kubernetes instance
@@ -197,11 +305,6 @@ data:
                       description: 'Optional: Node selector to control the selection of
                         nodes'
                       type: object
-                    priorityClassName:
-                      description: 'Optional: If specified, indicates the pod''s priority.
-                        Name must be defined by creating a PriorityClass object with that
-                        name.'
-                      type: string
                     replicas:
                       description: Amount of replicas for your DynaKube
                       format: int32
@@ -211,14 +314,12 @@ data:
                         single ActiveGate pods'
                       properties:
                         limits:
-                          additionalProperties:
-                            type: string
+                          additionalProperties: {}
                           description: 'Limits describes the maximum amount of compute
                             resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
                           type: object
                         requests:
-                          additionalProperties:
-                            type: string
+                          additionalProperties: {}
                           description: 'Requests describes the minimum amount of compute
                             resources required. If Requests is omitted for a container,
                             it defaults to Limits if that is explicitly specified, otherwise
@@ -271,8 +372,7 @@ data:
                       type: array
                   type: object
                 networkZone:
-                  description: 'Optional: Sets Network Zone for OneAgent and ActiveGate
-                    pods'
+                  description: 'Optional: Sets Network Zone for ActiveGate pods'
                   type: string
                 proxy:
                   description: 'Optional: Set custom proxy settings either directly or
@@ -284,14 +384,15 @@ data:
                       type: string
                   type: object
                 skipCertCheck:
-                  description: Disable certificate validation checks for installer download
-                    and API communication
+                  description: Disable certificate validation checks for API communication
                   type: boolean
                 tokens:
                   description: Credentials for the DynaKube to connect back to Dynatrace.
                   type: string
                 trustedCAs:
-                  description: 'Optional: Adds custom RootCAs from a configmap'
+                  description: 'Optional: Adds custom RootCAs from a configmap This property
+                    only affects certificates used to communicate with the Dynatrace API.
+                    The property is not applied to the ActiveGate'
                   type: string
               required:
                 - apiUrl
@@ -299,47 +400,13 @@ data:
             status:
               description: DynaKubeStatus defines the observed state of DynaKube
               properties:
-                conditions:
-                  description: Conditions includes status about the current state of the
-                    instance
-                  items:
-                    description: "Condition represents an observation of an object's state.
-                      Conditions are an extension mechanism intended to be used when the
-                      details of an observation are not a priori known or would not apply
-                      to all instances of a given Kind. \n Conditions should be added
-                      to explicitly convey properties that users and components care about
-                      rather than requiring those properties to be inferred from other
-                      observations. Once defined, the meaning of a Condition can not be
-                      changed arbitrarily - it becomes part of the API, and has the same
-                      backwards- and forwards-compatibility concerns of any other part
-                      of the API."
-                    properties:
-                      lastTransitionTime:
-                        format: date-time
-                        type: string
-                      message:
-                        type: string
-                      reason:
-                        description: ConditionReason is intended to be a one-word, CamelCase
-                          representation of the category of cause of the current status.
-                          It is intended to be used in concise output, such as one-line
-                          kubectl get output, and in summarizing occurrences of causes.
-                        type: string
-                      status:
-                        type: string
-                      type:
-                        description: "ConditionType is the type of the condition and is
-                          typically a CamelCased word or short phrase. \n Condition types
-                          should indicate state in the \"abnormal-true\" polarity. For
-                          example, if the condition indicates when a policy is invalid,
-                          the \"is valid\" case is probably the norm, so the condition
-                          should be called \"Invalid\"."
-                        type: string
-                    required:
-                      - status
-                      - type
-                    type: object
-                  type: array
+                activeGateImageHash:
+                  description: ActiveGateImageHash contains the last image hash seen.
+                  type: string
+                activeGateImageVersion:
+                  description: ActiveGateImageVersion contains the version from the last
+                    image seen.
+                  type: string
                 lastAPITokenProbeTimestamp:
                   description: LastAPITokenProbeTimestamp tracks when the last request
                     for the API token validity was sent
@@ -350,8 +417,8 @@ data:
                     for the PaaS token validity was sent
                   format: date-time
                   type: string
-                phase:
-                  description: Defines the current state (Running, Updating, Error, ...)
+                tokens:
+                  description: Credentials used to connect back to Dynatrace.
                   type: string
                 updatedTimestamp:
                   description: UpdatedTimestamp indicates when the instance was last updated
