--- a/dynatrace-operator/tests/customresource-dynakube_test.yaml
+++ b/dynatrace-operator/tests/customresource-dynakube_test.yaml
@@ -29,8 +29,6 @@ tests:
           path: spec.trustedCAs
       - isNull:
           path: spec.networkZone
-      - isNull:
-          path: spec.kubernetesMonitoring
 
   - it: should add skipCertCheck if enabled
     set:
@@ -112,13 +110,13 @@ tests:
       apiUrl: test-api-url
       apiToken: test-api-token
       paasToken: test-paas-token
-      activegate:
+      activeGate:
         image: test-image
     asserts:
       - isNotNull:
-          path: spec.activegate
+          path: spec.activeGate
       - isNotNull:
-          path: spec.activegate.image
+          path: spec.activeGate.image
       - equal:
-          path: spec.activegate.image
+          path: spec.activeGate.image
           value: test-image
