Adapt proxy setting

--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/secret.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/secret.yaml
@@ -18,6 +18,8 @@ kind: Secret
 metadata:
   name: {{ .Values.name }}
   namespace: {{ .Release.Namespace }}
+  labels:
+  {{- include "dynatrace-operator.labels" . | nindent 4 }}
 data:
   apiToken: {{ .Values.apiToken | b64enc }}
   paasToken: {{ .Values.paasToken | b64enc }}
