--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/values.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/values.yaml
@@ -19,9 +19,7 @@ apiUrl: ""
 apiToken: ""
 paasToken: ""
 skipCertCheck: false
-proxy:
-  value: ""
-  valueFrom: ""
+proxy: ""
 trustedCAs: ""
 networkZone: ""
 operator:
