--- a/dynatrace-operator/templates/customresource-dynakube.yaml
+++ b/dynatrace-operator/templates/customresource-dynakube.yaml
@@ -27,12 +27,9 @@ spec:
   skipCertCheck: {{ .Values.skipCertCheck }}
   {{- end }}
 
-  {{- if .Values.proxy.value }}
+  {{- if .Values.proxy }}
   proxy:
-    value: {{ .Values.proxy.value }}
-  {{- else if .Values.proxy.valueFrom }}
-  proxy:
-    valueFrom: {{ .Values.proxy.valueFrom }}
+    valueFrom: {{ .Values.name }}
   {{- end }}
 
   {{- if .Values.trustedCAs }}
